--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ brewer2mpl==1.4.1
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+click==8.1.7
 comm==0.1.3
 contourpy==1.0.7
 cycler==0.11.0
@@ -38,6 +39,7 @@ future==0.18.3
 gamegui==1.3.1
 ggplot==0.11.5
 ggpy==0.1.2
+ghp-import==2.1.0
 h11==0.14.0
 idna==3.4
 interface-meta==1.3.0
@@ -62,10 +64,13 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
 kiwisolver==1.4.4
 lifelines==0.27.8
+Markdown==3.6
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
+mergedeep==1.3.4
 mistune==2.0.5
+mkdocs==1.5.3
 mpmath==1.3.0
 nbclassic==0.5.3
 nbclient==0.7.2
@@ -82,6 +87,7 @@ packaging==23.0
 pandas==1.5.3
 pandocfilters==1.5.0
 parso==0.8.3
+pathspec==0.12.1
 patsy==0.5.3
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -106,6 +112,7 @@ python-dotenv==1.0.0
 python-json-logger==2.0.7
 pytz==2023.3
 PyYAML==6.0
+pyyaml_env_tag==0.1
 pyzmq==25.0.2
 qtconsole==5.4.1
 QtPy==2.3.1
@@ -139,6 +146,7 @@ typing_extensions==4.8.0
 ucimlrepo==0.0.3
 uri-template==1.2.0
 urllib3==1.26.15
+watchdog==4.0.0
 wcwidth==0.2.6
 webcolors==1.13
 webdriver-manager==3.8.5
