--- a/requirements.txt
+++ b/requirements.txt
@@ -1,159 +1,50 @@
 annotated-types==0.6.0
-anyio==3.6.2
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-ascii==3.6
-astor==0.8.1
-asttokens==2.2.1
-async-generator==1.10
-attrs==22.2.0
-autograd==1.6.2
-autograd-gamma==0.5.0
-backcall==0.2.0
-beautifulsoup4==4.12.0
-bleach==6.0.0
-brewer2mpl==1.4.1
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.7
-comm==0.1.3
-contourpy==1.0.7
-cycler==0.11.0
-debugpy==1.6.6
+anyio==4.3.0
+appnope==0.1.4
+asttokens==2.4.1
+comm==0.2.2
+debugpy==1.8.1
 decorator==5.1.1
-defusedxml==0.7.1
-et-xmlfile==1.1.0
-exceptiongroup==1.1.1
-executing==1.2.0
-fastapi==0.110.0
-fastjsonschema==2.16.3
-filelock==3.13.1
-fonttools==4.39.3
-formulaic==0.6.6
-fqdn==1.5.1
-fsspec==2023.12.1
-future==0.18.3
-gamegui==1.3.1
-ggplot==0.11.5
-ggpy==0.1.2
-ghp-import==2.1.0
-h11==0.14.0
-idna==3.4
-interface-meta==1.3.0
-ipykernel==6.22.0
-ipython==8.11.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.6
-isoduration==20.11.0
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.2.0
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.6.3
-jupyter_client==8.1.0
-jupyter_core==5.3.0
-jupyter_server==2.5.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.7
-kiwisolver==1.4.4
-lifelines==0.27.8
-Markdown==3.6
-MarkupSafe==2.1.2
-matplotlib==3.7.1
+exceptiongroup==1.2.0
+executing==2.0.1
+Faker==24.8.0
+fastapi==0.110.1
+idna==3.6
+install==1.3.5
+ipykernel==6.29.4
+ipython==8.23.0
+jedi==0.19.1
+joblib==1.4.0
+jupyter_client==8.6.1
+jupyter_core==5.7.2
 matplotlib-inline==0.1.6
-mergedeep==1.3.4
-mistune==2.0.5
-mkdocs==1.5.3
-mpmath==1.3.0
-nbclassic==0.5.3
-nbclient==0.7.2
-nbconvert==7.2.10
-nbformat==5.8.0
-nest-asyncio==1.5.6
-networkx==3.2.1
-notebook==6.5.3
-notebook_shim==0.2.2
-numpy==1.24.2
-openpyxl==3.1.2
-outcome==1.2.0
-packaging==23.0
-pandas==1.5.3
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.12.1
-patsy==0.5.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.4.0
-platformdirs==3.2.0
-prometheus-client==0.16.0
-prompt-toolkit==3.0.38
-psutil==5.9.4
+nest-asyncio==1.6.0
+numpy==1.26.4
+packaging==24.0
+pandas==2.2.1
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pycparser==2.21
 pydantic==2.6.4
 pydantic_core==2.16.3
-pygame==2.5.2
-Pygments==2.14.0
-pyparsing==3.0.9
-pyperclip==1.8.2
-pyrsistent==0.19.3
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-json-logger==2.0.7
-pytz==2023.3
-PyYAML==6.0
-pyyaml_env_tag==0.1
-pyzmq==25.0.2
-qtconsole==5.4.1
-QtPy==2.3.1
-requests==2.28.2
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-scikit-learn==1.2.2
-scipy==1.10.1
-seaborn==0.12.2
-selenium==4.8.3
-Send2Trash==1.8.0
+Pygments==2.17.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pyzmq==25.1.2
+scikit-learn==1.4.1.post1
+scipy==1.13.0
 six==1.16.0
-sklearn==0.0.post9
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.4
-stack-data==0.6.2
-starlette==0.36.3
-statsmodels==0.13.5
-sympy==1.12
-terminado==0.17.1
-threadpoolctl==3.1.0
-tinycss2==1.2.1
-torch==2.1.1
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.9.0
-trio==0.22.0
-trio-websocket==0.10.2
-typing_extensions==4.8.0
-ucimlrepo==0.0.3
-uri-template==1.2.0
-urllib3==1.26.15
-watchdog==4.0.0
-wcwidth==0.2.6
-webcolors==1.13
-webdriver-manager==3.8.5
-webencodings==0.5.1
-websocket-client==1.5.1
-widgetsnbextension==4.0.7
-wrapt==1.16.0
-wsproto==1.2.0
-xlrd==2.0.1
-Faker==24.7.1
+sniffio==1.3.1
+SQLAlchemy==2.0.29
+stack-data==0.6.3
+starlette==0.37.2
+threadpoolctl==3.4.0
+tornado==6.4
+traitlets==5.14.2
+typing_extensions==4.11.0
+tzdata==2024.1
+wcwidth==0.2.13
