--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.6.0
 anyio==4.3.0
 appnope==0.1.4
 asttokens==2.4.1
+click==8.1.7
 comm==0.2.2
 debugpy==1.8.1
 decorator==5.1.1
@@ -9,6 +10,7 @@ exceptiongroup==1.2.0
 executing==2.0.1
 Faker==24.8.0
 fastapi==0.110.1
+h11==0.14.0
 idna==3.6
 install==1.3.5
 ipykernel==6.29.4
@@ -47,4 +49,5 @@ tornado==6.4
 traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
+uvicorn==0.29.0
 wcwidth==0.2.13
