--- a/requirements.txt
+++ b/requirements.txt
@@ -10,21 +10,29 @@ exceptiongroup==1.2.0
 executing==2.0.1
 Faker==24.8.0
 fastapi==0.110.1
+ghp-import==2.1.0
 h11==0.14.0
 idna==3.6
 install==1.3.5
 ipykernel==6.29.4
 ipython==8.23.0
 jedi==0.19.1
+Jinja2==3.1.3
 joblib==1.4.0
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+Markdown==3.6
+MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
+mergedeep==1.3.4
+mkdocs==1.6.0
+mkdocs-get-deps==0.2.0
 nest-asyncio==1.6.0
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.1
 parso==0.8.4
+pathspec==0.12.1
 pexpect==4.9.0
 platformdirs==4.2.0
 prompt-toolkit==3.0.43
@@ -36,6 +44,8 @@ pydantic_core==2.16.3
 Pygments==2.17.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyYAML==6.0.1
+pyyaml_env_tag==0.1
 pyzmq==25.1.2
 scikit-learn==1.4.1.post1
 scipy==1.13.0
@@ -50,4 +60,5 @@ traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
 uvicorn==0.29.0
+watchdog==4.0.0
 wcwidth==0.2.13
