--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,15 @@ appnope==0.1.4
 asttokens==2.4.1
 click==8.1.7
 comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
 exceptiongroup==1.2.0
 executing==2.0.1
 Faker==24.8.0
 fastapi==0.110.1
+fonttools==4.51.0
 ghp-import==2.1.0
 h11==0.14.0
 idna==3.6
@@ -21,8 +24,10 @@ Jinja2==3.1.3
 joblib==1.4.0
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+kiwisolver==1.4.5
 Markdown==3.6
 MarkupSafe==2.1.5
+matplotlib==3.8.4
 matplotlib-inline==0.1.6
 mergedeep==1.3.4
 mkdocs==1.6.0
@@ -34,6 +39,7 @@ pandas==2.2.1
 parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
+pillow==10.3.0
 platformdirs==4.2.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
@@ -42,6 +48,7 @@ pure-eval==0.2.2
 pydantic==2.6.4
 pydantic_core==2.16.3
 Pygments==2.17.2
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
@@ -49,6 +56,7 @@ pyyaml_env_tag==0.1
 pyzmq==25.1.2
 scikit-learn==1.4.1.post1
 scipy==1.13.0
+seaborn==0.13.2
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.29
