--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,11 @@ annotated-types==0.6.0
 anyio==4.3.0
 appnope==0.1.4
 asttokens==2.4.1
+Babel==2.15.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
@@ -32,9 +36,12 @@ matplotlib-inline==0.1.6
 mergedeep==1.3.4
 mkdocs==1.6.0
 mkdocs-get-deps==0.2.0
+mkdocs-material==9.5.22
+mkdocs-material-extensions==1.3.1
 nest-asyncio==1.6.0
 numpy==1.26.4
 packaging==24.0
+paginate==0.5.6
 pandas==2.2.1
 parso==0.8.4
 pathspec==0.12.1
@@ -48,12 +55,15 @@ pure-eval==0.2.2
 pydantic==2.6.4
 pydantic_core==2.16.3
 Pygments==2.17.2
+pymdown-extensions==10.8.1
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 pyyaml_env_tag==0.1
 pyzmq==25.1.2
+regex==2024.5.10
+requests==2.31.0
 scikit-learn==1.4.1.post1
 scipy==1.13.0
 seaborn==0.13.2
@@ -67,6 +77,7 @@ tornado==6.4
 traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
+urllib3==2.2.1
 uvicorn==0.29.0
 watchdog==4.0.0
 wcwidth==0.2.13
