--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,5 +15,6 @@ plugins:
   - mkdocstrings:
       handlers:
         python:
-          rendering:
-            show_source: true
+          paths: [src]
+            rendering:
+              show_source: true
