--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,10 @@ site_name: CRR Project Documentation
 theme:
   name: material
 
+site_dir: site
+
+docs_dir: docs  
+
 nav:
   - Home: index.md
   - Database Documentation: db.md
@@ -17,4 +21,4 @@ plugins:
           rendering:
             show_source: true
 
-site_dir: docs            
+
